# barn

./: .gitignore  Cargo.toml  README.md  a.json  test.json  test.pem  todo.txt  user_id.txt
.github/workflows/: lint.yml
my-react-app/: jsconfig.json  package-lock.json  package.json
my-react-app/src/: App.js
my-react-app/src/components/: VaultComponent.js
my-react-app/src/components/ui/: button.jsx  input.jsx  select.jsx
my-react-app/src/lib/: utils.js
secure_data/: my_secret_document.txt
src/: access_control.rs  encryption.rs  endpoints.rs  handlers.rs  kv_silo.rs  main.rs  models.rs  shamir.rs  storage.rs
src/shamir_test/: Cargo.toml  shamir_test.rs
src/silos/: kv_silo.rs  mod.rs
src/sss_test/: Cargo.toml  sss_test.rs
ui/: component.html
ui/barn-ui/: package-lock.json  package.json
ui/barn-ui/app/: page.tsx
ui/barn-ui/components/: barn-home.tsx  barnhome.tsx
util/: access_control.rs  handlers.rs
