[package]
name = "barn"
version = "0.1.0"
authors = ["Azhan Khan 1byteword@gmail.com"]
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.9"
log = "0.4"
clap = { version = "3.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }