[package]
name = "barn"
version = "0.0.4"
authors = ["Azhan Khan 1byteword@gmail.com"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16.20"
sodiumoxide = "0.2.7"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
clap = { version = "3.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["json"] }
bcrypt = "0.8.0"
chacha20poly1305 = "0.10.1"
rand = "0.8"
sharks = "0.5.0"
once_cell = "1.19.0"
num-bigint = "0.4.5"
num-traits = "0.2.19"
shamirsecretsharing="0.1.5"
getrandom = "0.2"
generic-array = "0.14.4"

aws-config = "0.50"
aws-sdk-s3 = "0.18"